--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
